fixed text color on active admin menu on mobile

--- a/stylesheets/shared.css
+++ b/stylesheets/shared.css
@@ -11,6 +11,7 @@
 	--primary-color: #2196F3;
 	--secondary-color: #1976D2;
 	--accent-color: #F44336;
+    --text-color: #000;
 
     --nd-color: #fff;
     --nd-text-color: rgba(0, 0, 0, 0.5);
