--- a/stylesheets/shared.dark.css
+++ b/stylesheets/shared.dark.css
@@ -10,6 +10,7 @@
 /* TODO: Login Page */
 
 :root {
+    --text-color: #fff;
     --nd-text-color: rgba(255, 255, 255, 0.8) !important;
 }
 
